@@ -38,9 +38,11 @@ import org.graylog.events.notifications.NotificationDto;
 import org.graylog.events.notifications.types.HTTPEventNotificationConfig;
 import org.graylog.events.processor.DBEventDefinitionService;
 import org.graylog.events.processor.DBEventProcessorStateService;
+import org.graylog.events.processor.EventDefinition;
 import org.graylog.events.processor.EventDefinitionDto;
 import org.graylog.events.processor.EventDefinitionHandler;
 import org.graylog.events.processor.EventProcessorConfig;
+import org.graylog.events.processor.EventProcessorExecutionJob;
 import org.graylog.events.processor.aggregation.AggregationConditions;
 import org.graylog.events.processor.aggregation.AggregationEventProcessorConfig;
 import org.graylog.events.processor.storage.PersistToStreamsStorageHandler;
@@ -53,7 +55,6 @@ import org.graylog.scheduler.JobDefinitionDto;
 import org.graylog.scheduler.JobTriggerDto;
 import org.graylog.scheduler.clock.JobSchedulerClock;
 import org.graylog.security.entities.EntityRegistrar;
-import org.graylog.security.shares.EntityGrantLookup;
 import org.graylog.testing.mongodb.MongoDBExtension;
 import org.graylog.testing.mongodb.MongoDBFixtures;
 import org.graylog.testing.mongodb.MongoDBTestService;
@@ -72,6 +73,7 @@ import org.graylog2.database.MongoCollections;
 import org.graylog2.database.entities.DefaultEntityScope;
 import org.graylog2.database.entities.EntityScope;
 import org.graylog2.database.entities.EntityScopeService;
+import org.graylog2.database.entities.ImmutableSystemScope;
 import org.graylog2.database.entities.source.EntitySourceService;
 import org.graylog2.events.ClusterEventBus;
 import org.graylog2.plugin.PluginMetaData;
@@ -92,7 +94,6 @@ import org.mockito.junit.jupiter.MockitoExtension;
 import org.mockito.junit.jupiter.MockitoSettings;
 import org.mockito.quality.Strictness;
 
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Map;
 import java.util.Optional;
@@ -100,9 +101,11 @@ import java.util.Set;
 import java.util.stream.Stream;
 
 import static org.assertj.core.api.Assertions.assertThat;
+import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -111,7 +114,7 @@ import static org.mockito.Mockito.when;
 @ExtendWith(MongoDBExtension.class)
 @MockitoSettings(strictness = Strictness.WARN)
 public class EventDefinitionFacadeTest {
-    public static final Set<EntityScope> ENTITY_SCOPES = Collections.singleton(new DefaultEntityScope());
+    public static final Set<EntityScope> ENTITY_SCOPES = Set.of(new DefaultEntityScope(), new ImmutableSystemScope());
     private static final String REMEDIATION_STEPS = "remediation";
 
     private ObjectMapper objectMapper;
@@ -138,8 +141,6 @@ public class EventDefinitionFacadeTest {
     private UserService userService;
     @Mock
     private EntityRegistrar entityRegistrar;
-    @Mock
-    private EntityGrantLookup grantLookup;
     @Mock
     private EventProcessorConfig mockEventProcessorConfig;
     @Mock
@@ -181,8 +182,7 @@ public class EventDefinitionFacadeTest {
                 pluginMetaData,
                 jobDefinitionService,
                 eventDefinitionService,
-                userService,
-                grantLookup);
+                userService);
     }
 
     @Test
@@ -357,7 +357,7 @@ public class EventDefinitionFacadeTest {
     @Test
     public void listExcerptsExcludesNonContentPackExportableEventDefinitions() {
         EventDefinitionFacade testFacade = new EventDefinitionFacade(
-                objectMapper, eventDefinitionHandler, new HashSet<>(), jobDefinitionService, mockEventDefinitionService, userService, grantLookup);
+                objectMapper, eventDefinitionHandler, new HashSet<>(), jobDefinitionService, mockEventDefinitionService, userService);
         EventDefinitionDto dto = validEventDefinitionDto(mockEventProcessorConfig);
 
         when(mockEventProcessorConfig.isContentPackExportable()).thenReturn(false);
@@ -429,6 +429,198 @@ public class EventDefinitionFacadeTest {
         assertThat(graph).isNotNull();
         Set<Entity> expectedNodes = ImmutableSet.of(eventEntityV1, notificationV1);
         assertThat(graph.nodes()).isEqualTo(expectedNodes);
+    }
+
+    /**
+     * Content-pack upgrade of an immutable-scoped (e.g. Illuminate) event definition. This is the
+     * regression case: the entity is immutable to user-facing edits, but the installer must rewrite
+     * its content in place so the entity ID is preserved across an upgrade. Without the
+     * {@code checkMutability = false} bypass in the facade, this throws "Immutable entity cannot be
+     * modified".
+     */
+    @Test
+    public void updateNativeEntityRewritesImmutableScopedDefinitionInPlace() {
+        final EventDefinitionDto existing = persistDefinition(ImmutableSystemScope.NAME, "Illuminate rule v1");
+        assertThat(existing.id()).isNotNull();
+        assertThat(existing.scope()).isEqualTo(ImmutableSystemScope.NAME);
+
+        final NativeEntity<EventDefinitionDto> existingNative = NativeEntity.create(
+                NativeEntityDescriptor.create(ModelId.of("content-pack-id"), ModelId.of(existing.id()),
+                        ModelTypes.EVENT_DEFINITION_V1, existing.title()),
+                existing);
+
+        facade.updateNativeEntity(upgradedEntity("Illuminate rule v2"), existingNative,
+                ImmutableMap.of(), ImmutableMap.of(), "admin");
+
+        final Optional<EventDefinitionDto> reloaded = eventDefinitionService.get(existing.id());
+        assertThat(reloaded).isPresent();
+        assertThat(reloaded.get().id()).isEqualTo(existing.id());                 // ID preserved
+        assertThat(reloaded.get().title()).isEqualTo("Illuminate rule v2");       // content rewritten in place
+        assertThat(reloaded.get().scope()).isEqualTo(ImmutableSystemScope.NAME);  // scope preserved
+    }
+
+    /**
+     * The same upgrade path for an ordinary (mutable, default-scoped) event definition. Nothing about
+     * the bypass should change behaviour here: the ID is still preserved and the content updated.
+     */
+    @Test
+    public void updateNativeEntityRewritesDefaultScopedDefinitionInPlace() {
+        final EventDefinitionDto existing = persistDefinition(DefaultEntityScope.NAME, "Default rule v1");
+        assertThat(existing.id()).isNotNull();
+        assertThat(existing.scope()).isEqualTo(DefaultEntityScope.NAME);
+
+        final NativeEntity<EventDefinitionDto> existingNative = NativeEntity.create(
+                NativeEntityDescriptor.create(ModelId.of("content-pack-id"), ModelId.of(existing.id()),
+                        ModelTypes.EVENT_DEFINITION_V1, existing.title()),
+                existing);
+
+        facade.updateNativeEntity(upgradedEntity("Default rule v2"), existingNative,
+                ImmutableMap.of(), ImmutableMap.of(), "admin");
+
+        final Optional<EventDefinitionDto> reloaded = eventDefinitionService.get(existing.id());
+        assertThat(reloaded).isPresent();
+        assertThat(reloaded.get().id()).isEqualTo(existing.id());
+        assertThat(reloaded.get().title()).isEqualTo("Default rule v2");
+        assertThat(reloaded.get().scope()).isEqualTo(DefaultEntityScope.NAME);
+    }
+
+    @Test
+    public void updateNativeEntityPreservesEnabledState() {
+        final EventDefinitionDto existing = persistDefinition(ImmutableSystemScope.NAME, "Illuminate rule v1",
+                EventDefinition.State.ENABLED);
+
+        // The definition is enabled, so a scheduler job already exists for it.
+        when(jobSchedulerClock.nowUTC()).thenReturn(DateTime.now(DateTimeZone.UTC));
+        final var schedulerConfig = existing.config().toJobSchedulerConfig(existing, jobSchedulerClock).orElseThrow();
+        final JobDefinitionDto existingJob = JobDefinitionDto.builder()
+                .id("job-1")
+                .title(existing.title())
+                .description(existing.description())
+                .config(schedulerConfig.jobDefinitionConfig())
+                .build();
+        when(jobDefinitionService.getByConfigField(eq(EventProcessorExecutionJob.Config.FIELD_EVENT_DEFINITION_ID),
+                eq(existing.id()))).thenReturn(Optional.of(existingJob));
+        when(jobDefinitionService.save(any(JobDefinitionDto.class))).thenAnswer(inv -> inv.getArgument(0));
+        when(jobTriggerService.getOneForJob("job-1")).thenReturn(Optional.empty());
+
+        facade.updateNativeEntity(upgradedEntity("Illuminate rule v2", true), nativeOf(existing),
+                ImmutableMap.of(), ImmutableMap.of(), "admin");
+
+        final Optional<EventDefinitionDto> reloaded = eventDefinitionService.get(existing.id());
+        assertThat(reloaded).isPresent();
+        assertThat(reloaded.get().state()).isEqualTo(EventDefinition.State.ENABLED);
+        assertThat(reloaded.get().title()).isEqualTo("Illuminate rule v2");
+    }
+
+    /**
+     * The inverse: the pack's is_scheduled flag must not re-enable a definition the user disabled.
+     */
+    @Test
+    public void updateNativeEntityDoesNotReEnableDisabledDefinition() {
+        final EventDefinitionDto existing = persistDefinition(ImmutableSystemScope.NAME, "Illuminate rule v1",
+                EventDefinition.State.DISABLED);
+
+        facade.updateNativeEntity(upgradedEntity("Illuminate rule v2", true), nativeOf(existing),
+                ImmutableMap.of(), ImmutableMap.of(), "admin");
+
+        final Optional<EventDefinitionDto> reloaded = eventDefinitionService.get(existing.id());
+        assertThat(reloaded).isPresent();
+        assertThat(reloaded.get().state()).isEqualTo(EventDefinition.State.DISABLED);
+        verify(jobDefinitionService, never()).save(any(JobDefinitionDto.class));
+    }
+
+    /**
+     * Guard rail: the bypass is scoped to the installer path only. A user-facing update (the default
+     * {@code checkMutability = true} save) of the same immutable entity must still be rejected, so we
+     * are not weakening the immutability contract for the public API.
+     */
+    @Test
+    public void immutableScopedDefinitionStillRejectsUserFacingUpdate() {
+        final EventDefinitionDto existing = persistDefinition(ImmutableSystemScope.NAME, "Illuminate rule v1");
+        final EventDefinitionDto handEdited = existing.toBuilder().title("hand-edited").build();
+
+        assertThatThrownBy(() -> eventDefinitionService.save(handEdited))
+                .isInstanceOf(IllegalArgumentException.class)
+                .hasMessageContaining("Immutable entity cannot be modified");
+    }
+
+    /**
+     * Persists a brand-new event definition with the given scope (creation is never blocked by the
+     * mutability check) and returns it with its generated ID.
+     */
+    private EventDefinitionDto persistDefinition(String scope, String title) {
+        return persistDefinition(scope, title, EventDefinition.State.DISABLED);
+    }
+
+    private EventDefinitionDto persistDefinition(String scope, String title, EventDefinition.State state) {
+        final EventDefinitionEntity entity = objectMapper.convertValue(upgradedEntity(title).data(),
+                EventDefinitionEntity.class);
+        final EventDefinitionDto dto = entity.toNativeEntity(ImmutableMap.of(), ImmutableMap.of())
+                .toBuilder()
+                .scope(scope)
+                .state(state)
+                .build();
+        return eventDefinitionService.save(dto);
+    }
+
+    private static NativeEntity<EventDefinitionDto> nativeOf(EventDefinitionDto existing) {
+        return NativeEntity.create(
+                NativeEntityDescriptor.create(ModelId.of("content-pack-id"), ModelId.of(existing.id()),
+                        ModelTypes.EVENT_DEFINITION_V1, existing.title()),
+                existing);
+    }
+
+    /**
+     * Builds the content-pack representation of an "upgraded" event definition with the given title.
+     * Defaults to not scheduled, so the handler's scheduling branch is a no-op against the mocked
+     * job services and tests stay focused on the persistence/scope behaviour.
+     */
+    private EntityV1 upgradedEntity(String title) {
+        return upgradedEntity(title, false);
+    }
+
+    private EntityV1 upgradedEntity(String title, boolean scheduled) {
+        final EventFieldSpec fieldSpec = EventFieldSpec.builder()
+                .dataType(FieldValueType.STRING)
+                .providers(ImmutableList.of(TemplateFieldValueProvider.Config.builder().template("template").build()))
+                .build();
+        final SeriesSpec series = Count.builder().id("id-count").field("field").build();
+        final AggregationConditions condition = AggregationConditions.builder()
+                .expression(Expr.Greater.create(Expr.NumberValue.create(2), Expr.NumberValue.create(1)))
+                .build();
+        final AggregationEventProcessorConfigEntity aggregationConfig = AggregationEventProcessorConfigEntity.builder()
+                .query(ValueReference.of("*"))
+                .streams(ImmutableSet.of())
+                .groupBy(ImmutableList.of("project"))
+                .series(ImmutableList.of(series).stream().map(SeriesSpecEntity::fromNativeEntity).toList())
+                .conditions(condition)
+                .executeEveryMs(60000L)
+                .searchWithinMs(60000L)
+                .build();
+
+        final EventDefinitionEntity eventDefinitionEntity = EventDefinitionEntity.builder()
+                .title(ValueReference.of(title))
+                .description(ValueReference.of("upgraded"))
+                .priority(ValueReference.of(1))
+                .config(aggregationConfig)
+                .alert(ValueReference.of(false))
+                .fieldSpec(ImmutableMap.of("fieldSpec", fieldSpec))
+                .keySpec(ImmutableList.of())
+                .notificationSettings(EventNotificationSettings.builder()
+                        .gracePeriodMs(60000)
+                        .backlogSize(0)
+                        .build())
+                .notifications(ImmutableList.of())
+                .storage(ImmutableList.of())
+                .isScheduled(ValueReference.of(scheduled))
+                .build();
+
+        final JsonNode data = objectMapper.convertValue(eventDefinitionEntity, JsonNode.class);
+        return EntityV1.builder()
+                .data(data)
+                .id(ModelId.of("content-pack-ref"))
+                .type(ModelTypes.EVENT_DEFINITION_V1)
+                .build();
     }
 
     static EventDefinitionDto validEventDefinitionDto(EventProcessorConfig config) {
